2015-06-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/ASFTags/ASFTags.m
          some format string fixes
	* CynthiuneSliderCell.m
	  float -> CGFloat
	* Bundles/MP3/MP3.m
	  memcpy -> memmove, prevents segfault on playing MP3
          on OpenBSD

2014-03-06 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/FLAC/FLAC.[h|m]
	fix loading and playing of FLAC files with non-fragile-ABI

2014-02-28 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* PlaylistView.m
	  use NSDragOperation, and some int -> NSInteger transitions
	* Playlist.[h|m]
	  return NSUInteger for numberOfSongs instead of unsigned int
	  use NSUInteger with songAtIndex:
	  return NSUInteger for indexOfSong, and use NSUInteger for
	  moveSongsAtIndexes:toIndex:
	* PlaylistController.m
	  fix format string after numberOfSongs, and minor int -> NSInteger
	  transitions
	* Frameworks/Cynthiune/utils.h
	  fix format string

2013-02-24 Riccardo Mottola <rm@gnu.org>

	* Frameworks/Cynthiune/NSColorExtensions.m
	Remove OSX Hack.

2013-02-07: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/FLAC/FLAC.h
	  make it compile with non-fragile ABI
	* Bundles/Musepack/Musepack.m
	  fix potentially uninitialized return value
	* CynthiuneFadingTextField.h
	  float -> CGFloat transition
	* CynthiunePauseButton.m
	* MBResultsPanel.m
	* PlaylistViewController.m
	* Player.m
	  NS(U)Integer transitions, and fixing some NSLog
	  format strings
	  All this together makes the Player fading when start playing
	  a song work again on amd64

2013-01-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/VorbisTags/VorbisTags.m do not leak file descriptor

2013-01-22: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Cynthiune.gorm remove menu entry to send bug report mail

2012-07-23  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* CynthiuneController.[h|m]
	remove reference to Mailservice, and the sendABugReport method
